# esp32BMSGPS

./: .gitignore  .gpt_image2_api_key  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  README.en.md  README.md  gpt_image2_call.py  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  start.cmd  start.ps1  start.sh  vercel.json  wlanJZ.c
.agents/skills/esp32-lan-rfc2217-flash/: SKILL.md
.cargo/: config.toml
.github/workflows/: cloud-build.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
.serena/memories/hardware/: lan_rfc2217_flash_bridge.md
.trellis/: .template-hashes.json  config.yaml
.trellis/spec/backend/: directory-structure.md  hardware-build-flash.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  quality-guidelines.md
.trellis/spec/guides/: cross-layer-thinking-guide.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/07-04-esp32-gps-tft-bms-firmware/: design.md  task.json
.trellis/tasks/07-05-fix-tft-chinese-touch-taps/: design.md  task.json
.trellis/tasks/07-05-fix-tft-rotation-touch-language/: task.json
.trellis/tasks/07-05-fix-wifi-socketset-panic/: prd.md  task.json
.trellis/tasks/07-06-migrate-to-pure-esp-idf/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-07-bms-connection-homepage-ui/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-07-firmware-feature-roadmap/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-08-quick-panel-gesture-level-controls/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-08-settings-connectivity-quick-panel-interactions/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-09-full-source-c-memory-bit-optimization/: task.json
.trellis/tasks/07-10-fix-device-bms-settings-hotspot-freeze/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-11-complete-system-settings-touch-calibration/: implement.md  (+2 more)
android-cast/: build.gradle.kts  settings.gradle.kts
android-cast/app/: build.gradle.kts
build-esp32-wroom-32e-legacy-s1000rr-diag/: CPackConfig.cmake  CPackSourceConfig.cmake  config.env  esp_bms_module_registry.c  kconfigs.in
build-esp32-wroom-32e-legacy-s1000rr-diag/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build-esp32-wroom-32e-legacy-s1000rr-diag/log/: idf_py_stderr_output_1900784  idf_py_stderr_output_2480901  idf_py_stdout_output_1900784  idf_py_stdout_output_2480901
components/esp_bms_audio_feedback/: CMakeLists.txt  bms_connected.pcm  controller_connected.pcm  esp_bms_audio_feedback.c
components/esp_bms_audio_feedback/include/: esp_bms_audio_feedback.h
components/esp_bms_bms_ble/: CMakeLists.txt  esp_bms_bms_ble.c
components/esp_bms_controller_ble/: CMakeLists.txt  esp_bms_controller_ble.c
components/esp_bms_gps/: CMakeLists.txt  esp_bms_gps.c  esp_bms_gps_stream.c
components/esp_bms_gps/include/: esp_bms_gps.h  esp_bms_gps_stream.h
components/esp_bms_idf_runtime/: CMakeLists.txt  esp_bms_gps_stream.c  esp_bms_idf_runtime.c  esp_bms_speed_dashboard.c
components/esp_bms_idf_runtime/include/: esp_bms_gps_stream.h  esp_bms_idf_runtime.h  esp_bms_speed_dashboard.h
components/esp_bms_lvgl_bridge/: CMakeLists.txt  Kconfig  esp_bms_lvgl_bridge.c
components/esp_bms_lvgl_bridge/include/: esp_bms_lvgl_bridge.h
components/esp_bms_lvgl_contract/: CMakeLists.txt
components/esp_bms_lvgl_ui/: CMakeLists.txt  Kconfig  bluetoothon.c  controller_digits_72.c  esp_bms_lvgl_ui.c  fireblade_digits_64.c  fireblade_info_digits_12.c  fireblade_info_units_6.c  fireblade_info_units_8.c  fireblade_scale_digits_14.c  hotspoton.c  settings_zh_10.c  settings_zh_13.c  settings_zh_16.c
components/esp_bms_lvgl_ui/include/: esp_bms_lvgl_ui.h
components/esp_bms_network/: CMakeLists.txt  esp_bms_network.c
components/esp_bms_ota/: CMakeLists.txt  esp_bms_ota.c
components/esp_fardriver_protocol/: CMakeLists.txt  esp_fardriver_protocol.c
config/sdkconfig/: sdkconfig.defaults.dragdiag  sdkconfig.defaults.dragdiag-double-buffer  sdkconfig.defaults.dragdiag-no-full-invalidate
docs/hardware/: 01-requirements.md  02-architecture.md  03-components.md  04-constraints.md  05-validation.md  06-decisions.md  07-schematics.md  hardware-solution.html
firmware/partitions/: esp32-wroom-32e-legacy.csv  esp32s3-n16r8.csv
lvgl_conf/: lv_conf.h
main/: CMakeLists.txt  esp_bms_module_registry.c.in  esp_bms_module_registry.h  idf_component.yml  idf_main.c
main/web/: index.html
preview/: bms_lvgl_ui_preview.py  lvgl_render_compat.py  settings_text_bitmaps.py  speed_dashboard_v4_preview.py
scripts/: build-android-cast.sh  build-firmware.py  build-profile.sh  dispatch-cloud-build.py  esp-idf-drag-diag.sh  esp-idf-env.sh  esp-idf-version.ps1  flash.cmd  flash.ps1  generate-hardware-config.py  push-agnss.py  python3.cmd  raw-socket-monitor.py  run-host-selftests.sh  run-lvgl-simulator.sh  serial_tcp_bridge.cmd  serial_tcp_bridge.ps1
simulator/: CMakeLists.txt  lv_conf.h  main.c
simulator/include/: esp_check.h  esp_err.h  esp_heap_caps.h  esp_log.h  esp_timer.h  sdkconfig.h
src/: ant_bms.rs  app_state.rs  assets.rs  battery.rs  battery_adc.rs  bms_ble.rs  bms_scan.rs  board.rs  build_config.rs  cjk_font.rs  dhcp_server.rs  display.rs  flash_settings.rs  gps_nmea.rs  gps_service.rs  http_api.rs  http_server.rs  lib.rs  local_api.rs  lvgl_ui.rs  main.rs  ota_job.rs  ota_manifest.rs  ota_update.rs  provisioning.rs  qr.rs  runtime_effects.rs  settings.rs  settings_store.rs  touch.rs  touch_ui.rs  wifi_control.rs  wireless_wifi.rs
src/web/: index.html
tests/: configurator_selftest.sh  fardriver_protocol_selftest.c  gps_stream_selftest.c  speed_dashboard_selftest.c  test_cloud_dispatch.py
tmp/pcb-routing/: PCB1-4layer-ready.dsn  PCB1-4layer.lht  prepare_dsn.py  prepare_lht.py  restrict_autoroute.py  route_local_nets_host.mjs  ses_routes_to_easyeda_plan.py  transform_ses_for_easyeda.py
vercel/: index.html
(+381 files in other folders)
