[package]
name = "esp32-bms-gps"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-hal = { version = "1.1.1", features = ["esp32", "log-04", "unstable"] }
esp-backtrace = { version = "0.19.0", features = ["esp32", "panic-handler", "println"] }
esp-println = { version = "0.17.0", features = ["esp32", "log-04"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }
embedded-hal = "1.0"
embedded-storage = "0.3.1"
heapless = "0.9.3"
log = "0.4"
nb = "1.1"

esp-alloc = { version = "0.10.0", default-features = true, features = ["esp32"] }
esp-rtos = { version = "0.3.0", default-features = false, features = ["esp32", "esp-alloc", "esp-radio", "log-04"] }
embassy-executor = { version = "0.10.0", optional = true, default-features = false }
embassy-net = { version = "0.9.1", optional = true, default-features = false, features = ["dhcpv4", "dns", "medium-ethernet", "tcp", "udp"] }
embassy-sync = { version = "0.8.0", optional = true, default-features = false }
embassy-time = { version = "0.5.1", optional = true, default-features = false }
esp-radio = { version = "0.18.0", optional = true, default-features = false, features = ["esp32", "wifi", "esp-alloc", "log-04", "unstable"] }
esp-storage = { version = "0.9.0", optional = true, features = ["esp32"] }

[dependencies]
qrcodegen = { package = "qrcodegen-no-heap", version = "1.8.1" }
sha2 = { version = "0.10.9", default-features = false }

[features]
default = ["storage", "net"]
async-runtime = ["dep:embassy-executor", "dep:embassy-sync", "dep:embassy-time", "esp-rtos/embassy"]
storage = ["dep:esp-storage"]
wireless = ["async-runtime", "dep:esp-radio"]
ble-radio = ["wireless", "esp-radio/ble", "esp-radio/coex"]
net = ["wireless", "dep:embassy-net"]
full = ["net", "storage"]

[profile.dev]
debug = 2
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 1
lto = "fat"
opt-level = "s"
panic = "abort"
