if(CMAKE_BUILD_EARLY_EXPANSION AND DEFINED ENV{ESP_BMS_PROFILE_FILE})
    include("$ENV{ESP_BMS_PROFILE_FILE}")
endif()
if(DEFINED ENV{ESP_BMS_PROFILE_FILE} AND NOT "$ENV{ESP_BMS_PROFILE_FILE}" STREQUAL "")
    get_filename_component(ESP_BMS_PROFILE_GENERATED_DIR "$ENV{ESP_BMS_PROFILE_FILE}" DIRECTORY)
endif()

set(ESP_BMS_RUNTIME_REQUIRES
    bt driver esp_adc esp_bms_lvgl_bridge esp_bms_lvgl_ui esp_fardriver_protocol
    esp_http_server esp_hw_support esp_timer nvs_flash
)
if(NOT DEFINED ESP_BMS_FEATURE_GPS)
    set(ESP_BMS_FEATURE_GPS 1)
endif()
foreach(feature BMS CONTROLLER NETWORK)
    if(NOT DEFINED ESP_BMS_FEATURE_${feature})
        set(ESP_BMS_FEATURE_${feature} 1)
    endif()
endforeach()
if(NOT DEFINED ESP_BMS_FEATURE_OTA)
    set(ESP_BMS_FEATURE_OTA 1)
endif()
if(NOT DEFINED ESP_BMS_FEATURE_CAST)
    set(ESP_BMS_FEATURE_CAST 1)
endif()
if(NOT DEFINED ESP_BMS_FEATURE_DASHBOARD_S1000RR)
    set(ESP_BMS_FEATURE_DASHBOARD_S1000RR 1)
endif()
if(NOT DEFINED ESP_BMS_FEATURE_DASHBOARD_CONTROLLER)
    set(ESP_BMS_FEATURE_DASHBOARD_CONTROLLER 1)
endif()
if(NOT DEFINED ESP_BMS_FEATURE_DASHBOARD_FIREBLADE)
    set(ESP_BMS_FEATURE_DASHBOARD_FIREBLADE 1)
endif()
if(ESP_BMS_FEATURE_OTA)
    list(APPEND ESP_BMS_RUNTIME_REQUIRES esp_bms_ota)
endif()

idf_component_register(
    SRCS "esp_bms_idf_runtime.c" "esp_bms_speed_dashboard.c"
    INCLUDE_DIRS "include"
    PRIV_INCLUDE_DIRS "${ESP_BMS_PROFILE_GENERATED_DIR}"
    REQUIRES ${ESP_BMS_RUNTIME_REQUIRES}
)

target_compile_definitions(${COMPONENT_LIB} PRIVATE
    ESP_BMS_FEATURE_GPS=${ESP_BMS_FEATURE_GPS}
    ESP_BMS_FEATURE_BMS=${ESP_BMS_FEATURE_BMS}
    ESP_BMS_FEATURE_CONTROLLER=${ESP_BMS_FEATURE_CONTROLLER}
    ESP_BMS_FEATURE_NETWORK=${ESP_BMS_FEATURE_NETWORK}
    ESP_BMS_FEATURE_OTA=${ESP_BMS_FEATURE_OTA}
    ESP_BMS_FEATURE_CAST=${ESP_BMS_FEATURE_CAST}
    ESP_BMS_FEATURE_DASHBOARD_S1000RR=${ESP_BMS_FEATURE_DASHBOARD_S1000RR}
    ESP_BMS_FEATURE_DASHBOARD_CONTROLLER=${ESP_BMS_FEATURE_DASHBOARD_CONTROLLER}
    ESP_BMS_FEATURE_DASHBOARD_FIREBLADE=${ESP_BMS_FEATURE_DASHBOARD_FIREBLADE}
)
